@@ -943,12 +943,12 @@ function utilities_view_logfile() {
 		$new_item = "";
 
 		if ((!$host_start) && (!$ds_start)) {
-			$new_item = $item;
+			$new_item = htmlspecialchars($item);
 		}else{
 			while ($host_start) {
 				$host_end   = strpos($item, "]", $host_start);
 				$host_id    = substr($item, $host_start+5, $host_end-($host_start+5));
-				$new_item   = $new_item . substr($item, 0, $host_start + 5) . "<a href='" . htmlspecialchars("host.php?action=edit&id=" . $host_id) . "'>" . substr($item, $host_start + 5, $host_end-($host_start + 5)) . "</a>";
+				$new_item   = $new_item . htmlspecialchars(substr($item, 0, $host_start + 5)) . "<a href='" . htmlspecialchars("host.php?action=edit&id=" . $host_id) . "'>" . htmlspecialchars(substr($item, $host_start + 5, $host_end-($host_start + 5))) . "</a>";
 				$item       = substr($item, $host_end);
 				$host_start = strpos($item, "Host[");
 			}
@@ -957,12 +957,12 @@ function utilities_view_logfile() {
 			while ($ds_start) {
 				$ds_end   = strpos($item, "]", $ds_start);
 				$ds_id    = substr($item, $ds_start+3, $ds_end-($ds_start+3));
-				$new_item = $new_item . substr($item, 0, $ds_start + 3) . "<a href='" . htmlspecialchars("data_sources.php?action=ds_edit&id=" . $ds_id) . "'>" . substr($item, $ds_start + 3, $ds_end-($ds_start + 3)) . "</a>";
+				$new_item = $new_item . htmlspecialchars(substr($item, 0, $ds_start + 3)) . "<a href='" . htmlspecialchars("data_sources.php?action=ds_edit&id=" . $ds_id) . "'>" . htmlspecialchars(substr($item, $ds_start + 3, $ds_end-($ds_start + 3))) . "</a>";
 				$item     = substr($item, $ds_end);
 				$ds_start = strpos($item, "DS[");
 			}
 
-			$new_item = $new_item . $item;
+			$new_item = $new_item . htmlspecialchars($item);
 		}
 
 		/* get the background color */
