@@ -1,7 +1,9 @@
 Cacti CHANGELOG
 
 0.8.8g
-
+-bug:0002608: cacti 0.8.8f - Data Templates - Poller/script issue with backslash
+-bug:0002616: cdef.php -- Extra php closing tag
+-bug:0002617: PHP Warning is thrown when trying to include auth_login.php
 
 0.8.8f
 -bug:0002599: 0.8.8e Poller Script Parser is Broken
